# MAI-cpp-oop-lab-7

./: CMakeLists.txt  main.cpp
include/: dragon.hpp  druid.hpp  elf.hpp  factory.hpp  npc.hpp  observers.hpp
src/: dragon.cpp  druid.cpp  elf.cpp  factory.cpp  npc.cpp  observers.cpp
test/: test_logic.cpp
